--- a/src/view/cadastro.html
+++ b/src/view/cadastro.html
@@ -47,11 +47,11 @@
                 </div>
                 <div class="write-block">
                     <label for="senhaUsuario1">Senha:</label>
-                    <input type="text" id="senhaUsuario1" name="senhaUsuario1">
+                    <input type="password" id="senhaUsuario1" name="senhaUsuario1">
                 </div>
                 <div class="write-block">
                     <label for="senhaUsuario2">Repita Senha:</label>
-                    <input type="text" id="senhaUsuario2" name="senhaUsuario2">
+                    <input type="password" id="senhaUsuario2" name="senhaUsuario2">
                 </div>
                 <div class="read-block">
                     <label for="funcaoUsuario">Função:</label>
