--- a/src/view/estufaDetalhe.html
+++ b/src/view/estufaDetalhe.html
@@ -129,7 +129,7 @@
                     <p>Se o produto já estivar pronto para colher.</p>
                </div>
 
-                <button>
+                <button class="button-colher">
                     <img src="/imagem/hortalica.png" alt="Insumo">
                     <p>Colher Produto</p>
                 </button>
