--- a/public/style/mainStyle.css
+++ b/public/style/mainStyle.css
@@ -12,7 +12,7 @@ body {
 
     background: var(--color-background-menu);
     width: 35rem;
-    height: 66.4rem;
+    height: 100%;
 }
 
 .menu h1 {
@@ -36,7 +36,7 @@ body {
     margin-top: 1rem;
     margin-left: 1.5rem;
     width: 15rem;
-    height: 12rem;
+    height: 13rem;
 
     border-radius: 0.8rem;
     border: none
@@ -45,6 +45,35 @@ body {
 .button-menu:hover{
     transition: background 0.2s;
     background: var(--color-button-menu-dark);
+}
+
+.button-colher {
+    padding-left: 3rem;
+
+    display: flex;
+
+    background: var(--color-secondary);
+    margin-top: 1rem;
+    margin-left: 1.5rem;
+    width: 30rem;
+    height: 12rem;
+
+    
+
+    border-radius: 0.8rem;
+    border: none
+}
+
+.button-colher p{
+    padding-top: 1.4rem;
+
+    font-size: 3rem;
+    font-family: Poppins;
+}
+
+.button-colher:hover{
+    transition: background 0.2s;
+    background: var(--color-secondary-dark);
 }
 
 button a {
